@@ -1,4 +1,6 @@
 ver 0.21 (not yet released)
+* configuration
+  - add "include" directive, allows including config files
 * protocol
   - "tagtypes" can be used to hide tags
   - "find" and "search" can sort
